# mlx-data

./: .gitattributes  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  mlx-data.pc.in  pyproject.toml  setup.py
.circleci/: config.yml
benchmarks/: utils.py
benchmarks/comparative/: README.md
benchmarks/comparative/caltech101/: README.md  mlx_data.py  pytorch.py  run_caltech.sh  tfds.py
benchmarks/comparative/librispeech/: README.md  mlx_data.py  pytorch.py  run_librispeech.sh  tfds.py  utils.py
benchmarks/comparative/wikitext/: README.md  mlx_data.py  pytorch.py  run_wikitext.sh  tfds.py  utils.py
cmake/: FindFFMPEG.cmake  FindFLAC.cmake  FindJPEGTURBO.cmake  FindOgg.cmake  FindOpus.cmake  FindSampleRate.cmake  FindSndFile.cmake  FindVorbis.cmake  Findmp3lame.cmake  Findmpg123.cmake  bxzstr-v1.2.3.patch  bxzstr.patch  pybind11-v2.11.1.patch
docs/: .gitignore  README.md  requirements.txt
docs/src/: buffers_streams_samples.rst  conf.py  hf_datasets_streams.rst  index.rst  install.rst  quick_start.rst
docs/src/_templates/: data_core_modules.rst
docs/src/python/: buffer.rst  common_datasets.rst  dataset.rst  features.rst
lib/bxzstr/: CMakeLists.txt  README.md
lib/bxzstr/cmake/: FindZstd.cmake
lib/bxzstr/docs/: README.md
lib/bxzstr/docs/development/: adding_new_compression_types.md  building_tests.md
lib/bxzstr/include/: bxzstr.hpp  bz_stream_wrapper.hpp  compression_types.hpp  config.hpp  config.hpp.in  lzma_stream_wrapper.hpp  stream_wrapper.hpp  strict_fstream.hpp  z_stream_wrapper.hpp  zstd_stream_wrapper.hpp
lib/bxzstr/test/: CMakeLists-googletest.txt.in
lib/bxzstr/test/include/: bxzstr_ifstream_integrationtest.hpp  bxzstr_ofstream_integrationtest.hpp  bz_stream_wrapper_unittest.hpp  compression_types_unittest.hpp  lzma_stream_wrapper_unittest.hpp  z_stream_wrapper_unittest.hpp  zstd_stream_wrapper_unittest.hpp
lib/bxzstr/test/src/: bxzstr_ifstream_integrationtest.cpp  bxzstr_ofstream_integrationtest.cpp  bz_stream_wrapper_unittest.cpp  compression_types_unittest.cpp  lzma_stream_wrapper_unittest.cpp  z_stream_wrapper_unittest.cpp  zstd_stream_wrapper_unittest.cpp
lib/mlx/data/: Array.cpp  Array.h  Buffer.cpp  Buffer.h  Dataset.cpp  Dataset.h  Sample.cpp  Sample.h  Stream.cpp  Stream.h
lib/mlx/data/buffer/: Batch.cpp  Batch.h  Buffer.cpp  Buffer.h  DynamicBatch.cpp  DynamicBatch.h  FilesFromTAR.cpp  FilesFromTAR.h  FromStream.cpp  FromStream.h  FromVector.cpp  FromVector.h  Partition.cpp  Partition.h  Perm.cpp  Perm.h  Shuffle.cpp  Shuffle.h  Transform.cpp  Transform.h
lib/mlx/data/core/: AWSFileFetcher.cpp  AWSFileFetcher.h  BatchShape.cpp  BatchShape.h  CSVReader.cpp  CSVReader.h  FileFetcher.cpp  FileFetcher.h  Graph.cpp  Graph.h  Levenshtein.cpp  Levenshtein.h  Numpy.cpp  Numpy.h  State.cpp  State.h  TARReader.cpp  TARReader.h  ThreadController.cpp  ThreadController.h  ThreadPool.cpp  ThreadPool.h  Tokenizer.cpp  Tokenizer.h  Trie.h  Utils.cpp  Utils.h  imemstream.h
lib/mlx/data/op/: FilterByShape.cpp  FilterByShape.h  FilterKey.cpp  FilterKey.h  ImageTransform.cpp  ImageTransform.h  KeyTransform.cpp  KeyTransform.h  LoadAudio.cpp  LoadAudio.h  LoadFile.cpp  LoadFile.h  LoadImage.cpp  LoadImage.h  LoadNumpy.cpp  LoadNumpy.h  LoadVideo.cpp  LoadVideo.h  Op.cpp  Op.h  Pad.cpp  Pad.h  ReadFromTAR.cpp  ReadFromTAR.h  RemoveValue.cpp  RemoveValue.h  RenameKey.cpp  RenameKey.h  SampleTransform.cpp  SampleTransform.h  SaveImage.cpp  SaveImage.h  Shape.cpp  Shape.h  Shard.cpp  Shard.h  Squeeze.cpp  Squeeze.h  Tokenize.cpp  Tokenize.h
lib/mlx/data/stream/: Batch.cpp  Batch.h  Buffered.cpp  Buffered.h  CSVReader.cpp  CSVReader.h  Compose.cpp  Compose.h  DynamicBatch.cpp  DynamicBatch.h  FromBuffer.cpp  FromBuffer.h  LineReader.cpp  LineReader.h  Partition.cpp  Partition.h  Prefetch.cpp  Prefetch.h  Repeat.cpp  Repeat.h  Shuffle.cpp  Shuffle.h  SlidingWindow.cpp  SlidingWindow.h  Stream.cpp  Stream.h  Transform.cpp  (+1 more)
mlx/data/: Array.cpp  Array.h  Buffer.cpp  Buffer.h  Dataset.cpp  Dataset.h  Sample.cpp  Stream.cpp  Stream.h
mlx/data/buffer/: Append.cpp  Append.h  Batch.cpp  Batch.h  Buffer.cpp  Buffer.h  DynamicBatch.cpp  DynamicBatch.h  FilesFromTAR.cpp  FilesFromTAR.h  FromStream.cpp  FromStream.h  FromVector.cpp  FromVector.h  Partition.cpp  Partition.h  Perm.cpp  Shuffle.cpp  Shuffle.h  Transform.cpp  Transform.h
mlx/data/core/: AWSFileFetcher.cpp  AWSFileFetcher.h  BPETokenizer.cpp  BPETokenizer.h  BatchShape.cpp  CSVReader.cpp  CSVReader.h  FileFetcher.cpp  FileFetcher.h  Graph.cpp  Graph.h  Levenshtein.h  Numpy.cpp  Numpy.h  State.cpp  State.h  TARReader.cpp  TARReader.h  ThreadController.cpp  ThreadController.h  ThreadPool.h  Tokenizer.cpp  Tokenizer.h  Trie.h  Utils.cpp  Utils.h  Version.cpp  Version.h  imemstream.h
mlx/data/op/: FilterByShape.h  FilterKey.cpp  FilterKey.h  ImageTransform.cpp  KeyTransform.cpp  KeyTransform.h  LoadAudio.cpp  LoadAudio.h  LoadFile.cpp  LoadFile.h  LoadImage.cpp  LoadNumpy.h  Op.cpp  Op.h  Pad.cpp  Pad.h  ReadFromTAR.cpp  RemoveValue.cpp  RemoveValue.h  RenameKey.h  Replace.cpp  Replace.h  SampleTransform.h  SaveImage.cpp  SaveImage.h  Shape.cpp  Shape.h  Shard.cpp  Slice.cpp  Slice.h  Tokenize.cpp  Tokenize.h
mlx/data/stream/: Batch.cpp  Batch.h  Buffered.cpp  Buffered.h  CSVReader.h  Compose.cpp  DynamicBatch.cpp  DynamicBatch.h  FromBuffer.cpp  LineReader.cpp  LineReader.h  OrderedPrefetch.cpp  OrderedPrefetch.h  Partition.cpp  Partition.h  Repeat.cpp  Repeat.h  Shuffle.cpp  Shuffle.h  SlidingWindow.cpp  SlidingWindow.h  Stream.cpp  Stream.h  Transform.cpp  Transform.h
python/mlx/data/: __init__.py  core.py  tokenizer_helpers.py
python/src/: CMakeLists.txt  wrap.cpp  wrap.h  wrap_buffer.cpp  wrap_core.cpp  wrap_dataset.h  wrap_stream.cpp
python/tests/: test_bpe.py  test_buffer.py  test_dynamic_batch.py  test_general_ops.py  test_replace.py  test_tokenizer.py
python/tests/inputs/: atoms_vocab.txt  merges.txt
super/: CMakeLists.txt
super/cmake/: aws-1.11.557.patch  bzip2-1.0.8.patch  flac-1.5.0.patch  xvidcore-1.3.7.patch
(+37 files in other folders)
